reverseproxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ken-reverseproxy-service
  namespace: proxy
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: ken-reverseproxy
  type: ClusterIP
